Fix a11y errors (missing labels) and "ort" autocomplete z-index

--- a/core51/core.responsive.css
+++ b/core51/core.responsive.css
@@ -134,6 +134,10 @@ ul.dropdown ul li.has-subnav:after {
 .ac_even { background-color: #eee; }
 .ac_odd { background-color: #fff; }
 
+#wisy_autocomplete_wrapper .ui-autocomplete {
+	z-index: 1111;
+}
+
 /* Erweiterte Suche: Formular */
 
 #adv_all {
